<resources>
    <string name="app_name">Practice All Exercise</string>
    <string name="notification">Notification</string>
    <string name="test_notification">Test Notification</string>
    <string name="firebase_notification">Notification Firebase</string>
    <string name="test_firebase_notification">Test Notification Firebase</string>
    <string name="default_notification_channel_id">Default Notification Channel Id</string>
    <string name="recycler_view">Recycler View</string>
    <string name="intent">Intent</string>
    <string name="intent_receive">Intent Receive</string>
    <string name="coroutine">Coroutine</string>
    <string name="request_camera">Request Camera</string>
    <string name="request_gallery">Request Gallery</string>
    <string name="sql_lite">SQL Lite</string>
    <string name="live_data">Live Data</string>
    <string name="retrofit">Retrofit</string>
    <string name="view_model">View Model</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>